Added maven exec support and jar with dependencies